It compiles and runs now. The module registry seems to be working as it should

--- a/src/main/resources/assets/stevescarts/lang/en_US.lang
+++ b/src/main/resources/assets/stevescarts/lang/en_US.lang
@@ -453,6 +453,7 @@ info.SC2:moduleCategoryTool=Tool
 info.SC2:moduleCategoryStorage=Storage
 info.SC2:moduleCategoryAddon=Addon
 info.SC2:moduleCategoryAttachment=Attachment
+info.SC2:moduleCategoryInvalid=Invalid
 
 # Groups
 info.SC2:moduleGroupEngine=[%1:Engine|Engines]
