Fixed some localization issues

--- a/src/main/resources/assets/stevescarts/lang/en_US.lang
+++ b/src/main/resources/assets/stevescarts/lang/en_US.lang
@@ -255,6 +255,7 @@ item.SC2:tiny_coal_engine.name=Tiny Coal Engine
 item.SC2:basic_solar_engine.name=Basic Solar Engine
 item.SC2:projectile_potion.name=Projectile: Potion
 item.SC2:gift_storage.name=Gift Storage
+item.SC2:egg_basket.name=Egg Basket
 item.SC2:chunk_loader.name=Chunk Loader
 item.SC2:entity_detector_bat.name=Entity Detector: Bat
 item.SC2:freezer.name=Freezer
@@ -282,7 +283,6 @@ item.SC2:steves_arcade.name=Steve's Arcade
 item.SC2:hardened_wood_cutter.name=Hardened Wood Cutter
 item.SC2:creative_tank.name=Creative Tank
 item.SC2:open_tank.name=Open Tank
-item.SC2:egg_basket=Egg Basket
 item.SC2:drill_intelligence.name=Drill Intelligence
 item.SC2:lawn_mower.name=Lawn Mower
 item.SC2:galgadorian_farmer.name=Galgadorian Farmer
