Finished the localization update.

--- a/src/main/resources/assets/stevescarts/lang/change.lang
+++ b/src/main/resources/assets/stevescarts/lang/change.lang
@@ -672,89 +672,88 @@ modules.attachments.SC2:controlSystemReset=steves_vehicles:gui.cart.travel:advan
 #				Steve's Arcade
 # ======================================
 # Ghast Invaders
-arcade.SC2:ghastInvaders=Ghast Invaders
-arcade.SC2:ghastLives=Extra lives
-arcade.SC2:highScore=High Score: [%1]
-arcade.SC2:score=Score: [%1]
-arcade.SC2:instructionShoot=Shoot
-arcade.SC2:instructionLeft=Move left
-arcade.SC2:instructionRight=Move right
-arcade.SC2:instructionRestart=Restart
-arcade.SC2:creeperSweeper=Creeper Sweeper
-arcade.SC2:creeperMapName1=Tiny
-arcade.SC2:creeperMapName2=Medium
-arcade.SC2:creeperMapName3=Large
-arcade.SC2:creepersLeft=Creepers left:  [%1]
-arcade.SC2:creeperTime=Time spent: [%1]s
-arcade.SC2:instructionChangeMap=Change map size
-arcade.SC2:creeperCurrentMap=Current [%1]
-arcade.SC2:creeperHighScores=High Scores
-arcade.SC2:creeperHighScore=[%1]: [%2]s
-arcade.SC2:mobStacker=Mob Stacker
-arcade.SC2:stackerRemovedLines=Removed lines: [%1]
-arcade.SC2:stackerRemovedLinesCombo=Removed [%1->single|double|triple|quadruple] lines: [%2]
-arcade.SC2:instructionRotate=Rotate
-arcade.SC2:instructionDrop=Drop
-arcade.SC2:trackOperator=Track Operator
-arcade.SC2:operatorSaveError=Failed to save
-arcade.SC2:operatorSave=Save
-arcade.SC2:operatorUserCreatedMaps=User created maps
-arcade.SC2:operatorStories=Stories
-arcade.SC2:operatorHelp=For information on how to play just go into the Story mode and start 'The Beginning' story. To make your own map, go into the map editor and create a new map. Further instructions will be in there. Click on a detector rail and then on a junction if you want them to be connected. If you need more info, check the wiki.
-arcade.SC2:instructionTrackShape=Select track shape
-arcade.SC2:instructionRotateTrack=Rotate track
-arcade.SC2:instructionFlipTrack=Flip track
-arcade.SC2:instructionDefaultDirection=Change default direction
-arcade.SC2:instructionTrackType=Change track type
-arcade.SC2:instructionDeleteTrack=Delete track
-arcade.SC2:instructionCopyTrack=Copy track
-arcade.SC2:instructionMoveSteve=Move or rotate Steve
-arcade.SC2:instructionMoveMap=Move map
-arcade.SC2:instructionPlaceTrack=Place track
-arcade.SC2:instructionDeselectTrack=Deselect track
-arcade.SC2:leftMouseButton=LMouse
-arcade.SC2:rightMouseButton=RMouse
-arcade.SC2:buttonStart=Start
-arcade.SC2:buttonMenu=Menu
-arcade.SC2:buttonStop=Stop
-arcade.SC2:buttonNextLevel=Next Level
-arcade.SC2:buttonStartLevel=Start Level
-arcade.SC2:buttonSelectStory=Select Story
-arcade.SC2:buttonSelectStoryOther=Select another Story
-arcade.SC2:buttonCreateLevel=Create Level
-arcade.SC2:buttonEditLevel=Edit Level
-arcade.SC2:buttonRefreshList=Refresh List
-arcade.SC2:buttonSave=Save
-arcade.SC2:buttonSaveAs=Save as...
-arcade.SC2:buttonCancel=Cancel
-#This one is slightly ugly, will probably be re-named later
-stories.beginning.SC2:mapEditor=Map Editor
+arcade.SC2:ghastInvaders=steves_vehicles:gui.arcade.invaders:title
+arcade.SC2:ghastLives=steves_vehicles:gui.arcade.invaders:lives
+arcade.SC2:highScore=steves_vehicles:gui.arcade.invaders:high_score
+arcade.SC2:score=steves_vehicles:gui.arcade.invaders:score
+arcade.SC2:instructionShoot=steves_vehicles:gui.arcade.invaders:shoot
+arcade.SC2:instructionLeft=steves_vehicles:gui.arcade.invaders:left
+arcade.SC2:instructionRight=steves_vehicles:gui.arcade.invaders:right
+arcade.SC2:instructionRestart=steves_vehicles:gui.arcade.invaders:restart
+arcade.SC2:creeperSweeper=steves_vehicles:gui.arcade.sweeper:title
+arcade.SC2:creeperMapName1=steves_vehicles:gui.arcade.sweeper:map_tiny
+arcade.SC2:creeperMapName2=steves_vehicles:gui.arcade.sweeper:map_medium
+arcade.SC2:creeperMapName3=steves_vehicles:gui.arcade.sweeper:map_large
+arcade.SC2:creepersLeft=steves_vehicles:gui.arcade.sweeper:remaining
+arcade.SC2:creeperTime=steves_vehicles:gui.arcade.sweeper:time
+arcade.SC2:instructionChangeMap=steves_vehicles:gui.arcade.sweeper:change_map
+arcade.SC2:creeperCurrentMap=steves_vehicles:gui.arcade.sweeper:current_map
+arcade.SC2:creeperHighScores=steves_vehicles:gui.arcade.sweeper:high_score_title
+arcade.SC2:creeperHighScore=steves_vehicles:gui.arcade.sweeper:high_score_entry
+arcade.SC2:mobStacker=steves_vehicles:gui.arcade.stacker:title
+arcade.SC2:stackerRemovedLines=steves_vehicles:gui.arcade.stacker:removed
+arcade.SC2:stackerRemovedLinesCombo=steves_vehicles:gui.arcade.stacker:removed_combo
+arcade.SC2:instructionRotate=steves_vehicles:gui.arcade.stacker:rotate
+arcade.SC2:instructionDrop=steves_vehicles:gui.arcade.stacker:drop
+arcade.SC2:trackOperator=steves_vehicles:gui.arcade.track:title
+arcade.SC2:operatorSaveError=steves_vehicles:gui.arcade.track:save_error
+arcade.SC2:operatorSave=steves_vehicles:gui.arcade.track:save_message
+arcade.SC2:operatorUserCreatedMaps=steves_vehicles:gui.arcade.track:user_maps
+arcade.SC2:operatorStories=steves_vehicles:gui.arcade.track:stories
+arcade.SC2:operatorHelp=steves_vehicles:gui.arcade.track:help
+arcade.SC2:instructionTrackShape=steves_vehicles:gui.arcade.track:track_shape
+arcade.SC2:instructionRotateTrack=steves_vehicles:gui.arcade.track:track_rotate
+arcade.SC2:instructionFlipTrack=steves_vehicles:gui.arcade.track:track_flip
+arcade.SC2:instructionDefaultDirection=steves_vehicles:gui.arcade.track:track_direction
+arcade.SC2:instructionTrackType=steves_vehicles:gui.arcade.track:track_type
+arcade.SC2:instructionDeleteTrack=steves_vehicles:gui.arcade.track:track_delete
+arcade.SC2:instructionCopyTrack=steves_vehicles:gui.arcade.track:track_copy
+arcade.SC2:instructionMoveSteve=steves_vehicles:gui.arcade.track:move_steve
+arcade.SC2:instructionMoveMap=steves_vehicles:gui.arcade.track:move_map
+arcade.SC2:instructionPlaceTrack=steves_vehicles:gui.arcade.track:place_track
+arcade.SC2:instructionDeselectTrack=steves_vehicles:gui.arcade.track:deselect_track
+arcade.SC2:leftMouseButton=steves_vehicles:gui.arcade.track:left_mouse
+arcade.SC2:rightMouseButton=steves_vehicles:gui.arcade.track:right_mouse
+arcade.SC2:buttonStart=steves_vehicles:gui.arcade.track:start
+arcade.SC2:buttonMenu=steves_vehicles:gui.arcade.track:menu
+arcade.SC2:buttonStop=steves_vehicles:gui.arcade.track:stop
+arcade.SC2:buttonNextLevel=steves_vehicles:gui.arcade.track:next_level
+arcade.SC2:buttonStartLevel=steves_vehicles:gui.arcade.track:start_level
+arcade.SC2:buttonSelectStory=steves_vehicles:gui.arcade.track:select_story
+arcade.SC2:buttonSelectStoryOther=steves_vehicles:gui.arcade.track:select_other_story
+arcade.SC2:buttonCreateLevel=steves_vehicles:gui.arcade.track:create_level
+arcade.SC2:buttonEditLevel=steves_vehicles:gui.arcade.track:edit_level
+arcade.SC2:buttonRefreshList=steves_vehicles:gui.arcade.track:refresh_list
+arcade.SC2:buttonSave=steves_vehicles:gui.arcade.track:save
+arcade.SC2:buttonSaveAs=steves_vehicles:gui.arcade.track:save_as
+arcade.SC2:buttonCancel=steves_vehicles:gui.arcade.track:cancel
+stories.beginning.SC2:mapEditor=steves_vehicles:gui.arcade.track:editor_title
 
 # Story - The beginning
-stories.beginning.SC2:title=The beginning
-stories.beginning.SC2:mission=Steve is on a mission, he needs to get the map to find the next level.
-stories.beginning.SC2:start=Press the Start button to the right.
-stories.beginning.SC2:stop=If you want you can now press the Stop button to stop him.
-stories.beginning.SC2:map=Steve now has the map, press the Next Level button to continue.
-stories.beginning.SC2:trackOperator=You are The Track Operator, your job is to make sure that the rails are set up properly. Click on the junctions to change their directions before pressing the Start button.
-stories.beginning.SC2:goodJob=Good job. That's the way to do it.
-stories.beginning.SC2:changeJunctions=You can always press the Stop button and change how the junctions are set up.
-stories.beginning.SC2:blast=Steve thinks it's a blast to ride his Minecart but sometimes it gets too much. For instance if he loops forever. Good luck.
-stories.beginning.SC2:steel=There are always bumps in the road, for a Track Operator those are called Steel Rails. Steel Rail Junctions can't be changed, good luck.
-stories.beginning.SC2:detector=Detector rails can both be your friends and your enemies. When Steve moves over a detector rail a number of junctions may change, even steel junctions. To see which junctions will be affected, hover your mouse over a detector rail.
-stories.beginning.SC2:outOfReach=Just out of reach...
-stories.beginning.SC2:outOfReach2=...but that doesn't stop you.
-stories.beginning.SC2:longJourney=After a long journey Steve can see the end of his long path...
-stories.beginning.SC2:end=...but everything doesn't always go as planned. While you're waiting for more stories to play you can create and share your own maps. Go to the map editor tab in the menu to start making a map.
-stories.beginning.SC2:thanks=Thank you for playing! :)
-stories.beginning.SC2:level1=A new day
-stories.beginning.SC2:level2=The Operator
-stories.beginning.SC2:level3=Escape the loop
-stories.beginning.SC2:level4=Hard as steel
-stories.beginning.SC2:level5=Moving world
-stories.beginning.SC2:level6=The code lock
-stories.beginning.SC2:level7=So close
-stories.beginning.SC2:level8=Madness
-stories.beginning.SC2:level9=The cake
+stories.beginning.SC2:title=steves_vehicles:gui.arcade.track.stories:beginning.title
+stories.beginning.SC2:mission=steves_vehicles:gui.arcade.track.stories:beginning.mission
+stories.beginning.SC2:start=steves_vehicles:gui.arcade.track.stories:beginning.start
+stories.beginning.SC2:stop=steves_vehicles:gui.arcade.track.stories:beginning.stop
+stories.beginning.SC2:map=steves_vehicles:gui.arcade.track.stories:beginning.map
+stories.beginning.SC2:trackOperator=steves_vehicles:gui.arcade.track.stories:beginning.track_operator
+stories.beginning.SC2:goodJob=steves_vehicles:gui.arcade.track.stories:beginning.good_job
+stories.beginning.SC2:changeJunctions=steves_vehicles:gui.arcade.track.stories:beginning.change_junction
+stories.beginning.SC2:blast=steves_vehicles:gui.arcade.track.stories:beginning.blast
+stories.beginning.SC2:steel=steves_vehicles:gui.arcade.track.stories:beginning.steel
+stories.beginning.SC2:detector=steves_vehicles:gui.arcade.track.stories:beginning.detector
+stories.beginning.SC2:outOfReach=steves_vehicles:gui.arcade.track.stories:beginning.out_of_reach
+stories.beginning.SC2:outOfReach2=steves_vehicles:gui.arcade.track.stories:beginning.out_of_reach_2
+stories.beginning.SC2:longJourney=steves_vehicles:gui.arcade.track.stories:beginning.long_journey
+stories.beginning.SC2:end=steves_vehicles:gui.arcade.track.stories:beginning.end
+stories.beginning.SC2:thanks=steves_vehicles:gui.arcade.track.stories:beginning.thanks
+stories.beginning.SC2:level1=steves_vehicles:gui.arcade.track.stories:beginning.level_1
+stories.beginning.SC2:level2=steves_vehicles:gui.arcade.track.stories:beginning.level_2
+stories.beginning.SC2:level3=steves_vehicles:gui.arcade.track.stories:beginning.level_3
+stories.beginning.SC2:level4=steves_vehicles:gui.arcade.track.stories:beginning.level_4
+stories.beginning.SC2:level5=steves_vehicles:gui.arcade.track.stories:beginning.level_5
+stories.beginning.SC2:level6=steves_vehicles:gui.arcade.track.stories:beginning.level_6
+stories.beginning.SC2:level7=steves_vehicles:gui.arcade.track.stories:beginning.level_7
+stories.beginning.SC2:level8=steves_vehicles:gui.arcade.track.stories:beginning.level_8
+stories.beginning.SC2:level9=steves_vehicles:gui.arcade.track.stories:beginning.level_9
 
 
