Cleaned up a bit after the localization updates and updated teh creative tabs

--- a/src/main/resources/assets/stevescarts/lang/en_US.lang
+++ b/src/main/resources/assets/stevescarts/lang/en_US.lang
@@ -1,5 +1,12 @@
 # ======================================
-				BLOCK GUI
+#				CREATIVE TAB
+# ======================================
+steves_vehicles:gui.tab:base=Steve's Vehicles - [%1]
+steves_vehicles:gui.tab:items=Components
+steves_vehicles:gui.tab:blocks=Blocks
+
+# ======================================
+#				BLOCK GUI
 # ======================================
 
 # Cart assembler gui localization
