--- a/changelog.txt
+++ b/changelog.txt
@@ -43,3 +43,7 @@ Changed features, from a player's perspective.
 * The 3d carts that are rendered in the Assembler can't overflow anymore. Previously large modules could overflow at certain cart rotations.
 
 * A deluxe version of the Creative Mode upgrade for the assembler has been added. Apart from the effects the normal Creative Mode upgrade has it also has a third effect. This effect, when the upgrade is attached, gives the assembler two tabs for the black center area. The first tab is the content that is there usually, the 3d cart and the dropdown menus for simulation. However, if the second tab is selected one gets a list of modules. If a module is clicked, it will be added to the left where you add modules for a cart. When this upgrade is present clicking on a module in the left hand view will delete it (to keep you from filling up your inventory). The list of modules can be viewed in 3 different modes: "Relaxed", "Normal" and "Strict". The rules in common for all of these are that when no hull is selected it will only list hulls and once a hull is selected only modules working with that vehicle type will be visible, every other rule depend on the mode. "Relaxed" will show any module (that follows the common rules). It will even show the other hulls for the same type. This means that you can swap hulls by clicking on another one. "Normal" mode won't show any hulls (once a hull is selected), it will also hide modules with a modular cost that is too high for the hull (or if the module's parent has a too high cost). It will also hide modules that can't fit on the cart, i.e. if 6 attachments have been added already, no attachments will be shown. "Strict" mode will also check whether a module will fit or not. It will also check whether adding that module would cause any assembler errors (the ones displayed in red to the right in the interface). If this is the case the module will not be visible. Two things to note here is firstly that if there's already and error in the assembler no modules will show (unless the addition of that module removes the error) and secondly that some vehicles can't be made purely in "Strict" mode. For instance, an Advanced Shooter requires a Entity Detector and all the Entity Detectors require the Advanced Shooter. This means that none of these modules can be added without causing a assembly error. However, it's very easy to change between the different modes, it's done right below the modules themselves.
+
+* A new storage type has been added. These are barrels and there's currently 3 different types of them (basic, standard and large). These can store items, like chests, but only has room for one item type each. They can however store a huge amount of items, 64, 256 and 1024 stacks respectively. One can also lock these which means that the barrel will remember what item type it had even when it's emptied, only this item can then be put into the barrel.
+
+* Due to upgrades and modules using dynamic ids, and NEI addon is required to show their recipes, this is actually the case for all SV recipes since they all use the same system. This NEI addon comes with the mod, however. No extra download required. This addon, apart from just displaying the normal recipes, also has support for vehicles and their modules. If you check out the recipe for a assembled vehicle you can check out what modules were used to create it, how long it took and how much fuel was required. One can also check the usages of modules. The same display will be shown, but locked in on that module. The hull being used will (like when you look at a ore dictionary recipe for instance) as well as the required modules (for instance, if you look at a thermal engine it will change between tank types). The stats and output will reflect the current combination of modules.
