Updated the changelog.

--- a/changelog.txt
+++ b/changelog.txt
@@ -46,4 +46,12 @@ Changed features, from a player's perspective.
 
 * A new storage type has been added. These are barrels and there's currently 3 different types of them (basic, standard and large). These can store items, like chests, but only has room for one item type each. They can however store a huge amount of items, 64, 256 and 1024 stacks respectively. One can also lock these which means that the barrel will remember what item type it had even when it's emptied, only this item can then be put into the barrel.
 
-* Due to upgrades and modules using dynamic ids, and NEI addon is required to show their recipes, this is actually the case for all SV recipes since they all use the same system. This NEI addon comes with the mod, however. No extra download required. This addon, apart from just displaying the normal recipes, also has support for vehicles and their modules. If you check out the recipe for a assembled vehicle you can check out what modules were used to create it, how long it took and how much fuel was required. One can also check the usages of modules. The same display will be shown, but locked in on that module. The hull being used will (like when you look at a ore dictionary recipe for instance) as well as the required modules (for instance, if you look at a thermal engine it will change between tank types). The stats and output will reflect the current combination of modules.
+* Due to upgrades and modules using dynamic ids, an NEI addon is required to show their recipes, this is actually the case for all SV recipes since they all use the same system. This NEI addon comes with the mod, however. No extra download required. This addon, apart from just displaying the normal recipes, also has support for vehicles and their modules. If you check out the recipe for a assembled vehicle you can check out what modules were used to create it, how long it took and how much fuel was required. One can also check the usages of modules. The same display will be shown, but locked in on that module. The hull being used will (like when you look at a ore dictionary recipe for instance) as well as the required modules (for instance, if you look at a thermal engine it will change between tank types). The stats and output will reflect the current combination of modules.
+
+* The chest - and tank panes have been removed. The cargo - and liquid managers have received cheaper recipes while the chests and tanks have received slightly more expensive recipes. However, these recipes are much easier to make since they just require slabs and planks or glass panes and glass.
+
+* The detector units are now shapeless recipes that are being combined with the base unit. The base unit is still a shaped recipe.
+
+* The raw hardener recipe is now shapeless and yields 4 raw hardeners (rather than 2). This means that the reinforced stuff is much cheaper when it comes to obsidian and diamond. It also affects the price of galgadorian stuff (since that uses reinforced metal) but it doesn't affect it too much since it still uses a diamond block (i.e. diamond cost in the raw hardener was only a small part of the diamond cost).
+
+* Other blocks and components have received various tweaks.
