--- a/src/main/resources/assets/stevescarts/lang/da_DK.lang
+++ b/src/main/resources/assets/stevescarts/lang/da_DK.lang
@@ -1,5 +1,5 @@
 # ======================================
-				BLOCK GUI
+#				BLOCK GUI
 # ======================================
 
 # Cart assembler gui localization
