--- a/src/main/resources/assets/stevescarts/lang/change.txt
+++ b/src/main/resources/assets/stevescarts/lang/change.txt
@@ -311,10 +311,10 @@ item.SC2:iron_wheels.name=steves_vehicles:item.component:iron_wheels.name
 item.SC2:red_pigment.name=steves_vehicles:item.component:red_pigment.name
 item.SC2:green_pigment.name=steves_vehicles:item.component:green_pigment.name
 item.SC2:blue_pigment.name=steves_vehicles:item.component:blue_pigment.name
-item.SC2:glass_o'_magic.name=steves_vehicles:item.component:glass_o_magic.name
+item.SC2:glass_o'magic.name=steves_vehicles:item.component:glass_o_magic.name
 item.SC2:dynamite.name=steves_vehicles:item.component:dynamite.name
-item.SC2:removed_1.name=steves_vehicles:item.component:removed_1.name
-item.SC2:removed_2.name=steves_vehicles:item.component:removed_2.name
+--item.SC2:removed_1.name=steves_vehicles
+--item.SC2:removed_2.name=steves_vehicles
 item.SC2:simple_pcb.name=steves_vehicles:item.component:simple_pcb.name
 item.SC2:graphical_interface.name=steves_vehicles:item.component:graphical_interface.name
 item.SC2:raw_handle.name=steves_vehicles:item.component:raw_handle.name
@@ -411,26 +411,26 @@ item.SC2:BlockStorage1.name=steves_vehicles:tile.metal_storage:galgadorian
 item.SC2:BlockStorage2.name=steves_vehicles:tile.metal_storage:enhanced_galgadorian
 
 # Upgrades
-item.SC2:batteries=steves_vehicles:tile.power:batteries.name
-item.SC2:power_crystal=steves_vehicles:tile.power:power_crystal.name
-item.SC2:co2_friendly=steves_vehicles:tile.power:co2_friendly.name
-item.SC2:generic_engine=steves_vehicles:tile.power:generic_engine.name
-item.SC2:thermal_engine_upgrade=steves_vehicles:tile.power:thermal_engine_upgrade.name
-item.SC2:solar_panel=steves_vehicles:tile.power:solar_panel.name
-item.SC2:module_knowledge=steves_vehicles:tile.production:module_knowledge.name
-item.SC2:industrial_espionage=steves_vehicles:tile.production:industrial_espionage.name
-item.SC2:experienced_assembler=steves_vehicles:tile.production:experienced_assembler.name
-item.SC2:new_era=steves_vehicles:tile.production:new_era.name
-item.SC2:quick_demolisher=steves_vehicles:tile.production:quick_demolisher.name
-item.SC2:entropy=steves_vehicles:tile.production:entropy.name
-item.SC2:creative_mode=steves_vehicles:tile.production:creative_mode.name
-item.SC2:module_input=steves_vehicles:tile.control:module_input.name
-item.SC2:production_line=steves_vehicles:tile.control:production_line.name
-item.SC2:cart_deployer=steves_vehicles:tile.control:cart_deployer.name
-item.SC2:cart_modifier=steves_vehicles:tile.control:cart_modifier.name
-item.SC2:cart_crane=steves_vehicles:tile.control:cart_crane.name
-item.SC2:redstone_control=steves_vehicles:tile.control:redstone_control.name
-item.SC2:manager_bridge=steves_vehicles:tile.control:manager_bridge.name
+item.SC2:batteries.name=steves_vehicles:tile.power:batteries.name
+item.SC2:power_crystal.name=steves_vehicles:tile.power:power_crystal.name
+item.SC2:co2_friendly.name=steves_vehicles:tile.power:co2_friendly.name
+item.SC2:generic_engine.name=steves_vehicles:tile.power:generic_engine.name
+item.SC2:thermal_engine_upgrade.name=steves_vehicles:tile.power:thermal_engine_upgrade.name
+item.SC2:solar_panel.name=steves_vehicles:tile.power:solar_panel.name
+item.SC2:module_knowledge.name=steves_vehicles:tile.production:module_knowledge.name
+item.SC2:industrial_espionage.name=steves_vehicles:tile.production:industrial_espionage.name
+item.SC2:experienced_assembler.name=steves_vehicles:tile.production:experienced_assembler.name
+item.SC2:new_era.name=steves_vehicles:tile.production:new_era.name
+item.SC2:quick_demolisher.name=steves_vehicles:tile.production:quick_demolisher.name
+item.SC2:entropy.name=steves_vehicles:tile.production:entropy.name
+item.SC2:creative_mode.name=steves_vehicles:tile.production:creative_mode.name
+item.SC2:module_input.name=steves_vehicles:tile.control:module_input.name
+item.SC2:production_line.name=steves_vehicles:tile.control:production_line.name
+item.SC2:cart_deployer.name=steves_vehicles:tile.control:cart_deployer.name
+item.SC2:cart_modifier.name=steves_vehicles:tile.control:cart_modifier.name
+item.SC2:cart_crane.name=steves_vehicles:tile.control:cart_crane.name
+item.SC2:redstone_control.name=steves_vehicles:tile.control:redstone_control.name
+item.SC2:manager_bridge.name=steves_vehicles:tile.control:manager_bridge.name
 
 # Detector Units
 item.SC2:BlockDetector0.name=steves_vehicles:tile.detector_unit:normal.name
